--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,3 @@
-
 /*
 Theme Name: Landing Page Kenzie Academy
 Theme URI: https://kenzie.com.br/
@@ -7,7 +6,6 @@ Author URI: https://kenzie.com.br/
 Description: Descrção do thema.
 Version: 1.0
 Text Domain: https://kenzie.com.br/
-
 --------------------------------------------
 ESTRUTURAÇÃO BASE
 --------------------------------------------
@@ -19,7 +17,6 @@ ESTRUTURAÇÃO BASE
 **** PÁGINA INICIAL
 **** EXTRAS
 **** @MEDIA
-
 family=Montserrat -> Menus
 family=Lato -> Títulos, textos
 */
@@ -32,16 +29,32 @@ family=Lato -> Títulos, textos
 :root{}
   
 /* GERAL */
-html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul{
+html, body, figure, div, input, textarea, p, h1, h3, h4, h5, h6, ul{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: lato;
     list-style: none;
+    margin: 0 auto;
+}
+
+h2{
+  font-family: Montserrat ;
 }
 img{
-    max-width: 800px;
+    max-width: 80px;
 }
+.tituloDestaque{
+  font-size:63px;
+}
+.subTituloDestaque{
+  text-align: center;
+  font-size:21px;
+  display: flex;
+  flex-direction:;
+  margin:2px;
+}
+
 div.flex{
     display: flex;
 }
@@ -61,7 +74,62 @@ div.container{
     margin:0 auto;
 }
 /* GERAL */
+.secaoDestaque{
+  font-family: lato;
+  color:white;
   
+}
+
+.formulario{
+  
+}
+
+
+.formFilho{
+  width: 400px;
+  color: red;
+}
+
+fildset{
+  width:400px;
+  height:50px;
+}
+
+input{
+  color:red;
+  
+}
+
+#menuNav{
+  list-style: none;
+  padding: 0;
+  background-color:#00043e;
+  opacity: ;
+}
+
+#menuNav li {
+  display: inline;
+}
+
+#menuNav li a{
+  color:#FFFFFF;
+  text-decoration:none;
+  display: inline-block;
+  padding: 2%;
+  transition: background 0.5s
+  float: right;
+}
+
+.logoKenzie{
+  size: 5%;
+  color:black;
+}
+
+#menuNav li a:hover{
+  background-color:#000080;
+  
+}
+     
 /* HTML */
 html{}
 /* HTML */
@@ -73,7 +141,16 @@ body{}
 /* HEADER */
 header{}
 /* HEADER */
+.cabecaAzul{
+  background-image:url("https://bit.ly/2WFnMJ3");
+  background-position: left top;
+  background-size: 120%;
+  background-repeat: no-repeat;
+  padding: 5%;
+  display:;
+  justify-content: ;
   
+}  
 /* FOOTER */
 footer{}
 /* FOOTER */
