--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,259 @@ main{}
   
 
 /* MEDIA QUERIES */
-    @media screen and (min-width: 400px) {}
+    @media screen and (min-width: 400px) {
+        
+        html{
+            font-family: Lato;
+        }
+
+        h2{
+            font-family: montserrat;
+        }
+
+        .large-container{
+            font-size:13px;
+        }
+
+        .topo {
+            background-color: #00043e; 
+            color:#ffff;
+            padding: 5%;
+            margin-top: 10%;
+            
+          
+        }
+        
+        .secaoDestaqueFormulario{
+            padding: 3%;
+        }
+
+        .secaoDestaqueFormulario input{
+            padding: 2%;
+            font-size: 100%;
+            border-radius: 10px;
+            margin:none;
+            
+        }
+
+        .secaoDestaque h2{
+            text-align: center;
+            font-size: 170%;
+        }
+        .secaoDestaque p{
+            text-align: center;
+            padding: 5%;
+            font-size: 120%;
+        }
+
+        .secaoDestaqueFormulario button{
+            padding: 2%;
+            font-size: 100%;
+            border-radius: 10px;
+            background-color: #007aff;
+            
+        }
+
+        .secaoDestaque{
+            background-color: #00043e; 
+            color:#ffff;
+            padding: 5%;
+        }
+
+        .topo img{
+            width: 17%;
+            margin: 3%;
+        }
+        
+        .flex-col p{
+           margin: 15%;
+           text-align: start;
+           color: #818181;;
+        }
+       
+        .flex-col span{
+           display: flex;
+           padding: 10%;
+           color: #818181;        
+        }
+
+        .flex-col button{
+           padding: 2%;
+           font-size: 130%;
+
+        }
+
+        figcaption{
+           padding-bottom:10%;
+           font-size: 150%;
+
+        }
+
+        .pythonImg{
+           width: 90%;
+           padding-top:10%;
+        }
+
+        .jsImg{
+           width: 50%;
+           padding-top:10%;
+        }
+
+        .flex-colu h2{
+           text-align: center;
+           margin:15%;
+
+        }
+
+        .flex-colu ul{
+           list-style:disc;
+           text-align: start;
+           margin:15%;
+           color:#818181;
+        
+        }
+
+        .secaoCursos p{
+           font-size: 150%;
+           padding:5%;
+           color: #303030;
+        }
+
+        .secaoCursos{
+           box-sizing: border-box;
+           display: flex;
+           flex-direction: column;
+           margin: 0 auto;
+           padding: 20px;
+           width: 80%;
+           text-align: center;
+        }
+
+        .secaoCursos p{
+           padding: 6%;
+           color:#818181;
+        }
+
+        .secaoCursos img{
+           width: 40%;
+
+        }
+      
+        .secaoCalendar{
+           text-align: center;
+  
+        }
+      
+        .calendario{
+           box-sizing: border-box;
+           display: flex;
+           flex-direction: column;
+           margin: 0 auto;
+           padding: 20px;
+           width: 80%;
+        
+        }
+
+        .calendario h3{
+          text-align: center;
+        }
+
+        .calendario{
+           text-align: justify;
+          
+           display: flex;
+           flex-direction: column;
+           margin: 0 auto;
+           padding: 20%;
+           width: 90%;
+        }
+
+        .calendario li{
+            border: 1px solid #00043e;
+            margin-bottom: 5%;
+        }
+        .calendario-data{
+            display: flex;
+            justify-content: center;
+            font-size: 250%;
+            border: 1px solid rgb(166, 166, 235);
+            background:#00043e;
+            padding: 15%;
+            color: white;
+        }
+
+        .calendario-data-rodape span{
+           margin-top: 1px sold gray;
+            padding:1%;
+            font-size: 200% ;
+        }
+
+        .calendario p{
+            padding:7%;
+            font-size: 95%;
+            color:#818181;
+            text-align: center;
+
+        }
+
+        .calendario h3{
+            font-size: 200%;
+        }
+
+        .calendario-data-rodape{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .calendario-data-rodape span{
+            align-content: center;
+        }
+
+        .calendario-data-rodape button{
+            justify-content:center;
+            font-size: 150%;
+            padding: 2%;
+            border-radius: 10px;
+            background-color: #007aff ;
+            color:white;
+            width: 75%;
+            margin: 5%;
+            
+        }
+            
+
+        .flex{
+           text-align: center;
+           box-sizing: border-box;
+           display: flex;
+           flex-direction: column;
+           margin: 0 auto;
+           border-radius: 5px;
+           background-color: #ffff;
+           padding: 8%;
+           width: 90%;
+        }
+
+        .form-input-model {         
+           padding: 3%;
+           border:15px;
+           justify-content: flex-end;
+
+        }
+
+        .enviar {
+           padding: 2%;
+           font-size: 100%;
+        }
+         
+        footer{
+           text-align: center;
+           padding:5%;
+        }
+
+
+    }
   
     @media screen and (min-width: 800px) {}
 /* MEDIA QUERIES */
